# rustApi

./: Cargo.toml
src/: main.rs
src/api/: mod.rs  todo_controller.rs
src/api/routes/: mod.rs  todo_routes.rs
src/data_access/: dbcontext.rs  mod.rs
src/data_access/repository/: mod.rs  todo_memory_repository.rs  todo_repository.rs
src/domain/: mod.rs
src/domain/repository/: mod.rs  trait_todo_repository.rs
src/repository/: todo_repository.rs
