[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
async-std = {version="1.10.0", features = ["attributes"]}
once_cell = "1.17.1"
tiberius = "0.12.2"
uuid = { version = "1.6.1", features = ["v4"] }
